Fix keynote layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,6 +108,14 @@ padding-top: 20px;
   width:6vw;
 }
 
+.keynote-face{
+  border-radius: 40%;
+  object-fit:cover;
+  height: 10vw;
+  width: 10vw;
+  
+}
+
 .logo {
   width: 13vw;
   min-width: 150px;
